@@ -1,1 +1,1 @@
-LINBO 2.3.25-1
+LINBO 2.3.26-0
