@@ -1,3 +1,13 @@
+linuxmuster-linbo (2.3.26-0) babo62; urgency=low
+
+  * debian/rules: fixed file distribution in linuxmuster-linbo-common7 pkg.
+  * linuxmuster-linbo7:
+    - added script mkgrubhostimg.py for host specific pxe boot image creation.
+    - removed module variables in mkgrubnetdir.sh using global variables from
+      linuxmuster-base7.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Jul 2017 16:26:56 +0000
+
 linuxmuster-linbo (2.3.25-1) babo62; urgency=low
 
   * packages consolidation:
